--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "js-search": "^2.0.1",
     "next": "^14.0.4",
     "react": "^18",
